// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ToolResultBlock renders a success result as a JSON dump 1`] = `
"<div>
  <div data-testid="tool-result" class="border border-steel/20">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-steel">
      Tool result · echo · success
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      {
  "echoed": "ping"
}
    </pre>
  </div>
</div>"
`;

exports[`ToolResultBlock delegates an error result to ToolErrorBlock 1`] = `
"<div>
  <div data-testid="tool-error" class="border border-red/40">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-red">
      Tool error
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      some tool error
    </pre>
  </div>
</div>"
`;

exports[`ToolResultBlock delegates a crash result to ToolErrorBlock 1`] = `
"<div>
  <div data-testid="tool-error" class="border border-red/40">
    <div class="px-4 py-2 font-mono text-xs uppercase tracking-widest text-red">
      Tool crashed
    </div>
    <pre class="whitespace-pre-wrap wrap-break-word bg-gunmetal px-4 py-3 font-mono text-xs text-cream">
      some tool crash
    </pre>
  </div>
</div>"
`;
